Fix nav alignment
Refactor nav to use the container style

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -43,25 +43,8 @@ th, td {text-align: left;vertical-align: top}
 
 /* Vos */
 
-.nav {
-  margin: 20px;
-  max-width: 920px;
-  text-align: left;
-}
-
-.nav .nav-title {
-  font-size: 2em;
-  color: #111;
-  text-decoration: none;
-}
-
-.nav .nav-sub {
-  color: #111;
-  text-decoration: none;
-}
-
 .container {
-  margin: 0 auto 50px;
+  margin: 0 auto;
   max-width: 920px;
   text-align: left;
   padding: 0 20px ;
@@ -69,6 +52,21 @@ th, td {text-align: left;vertical-align: top}
 
 .container .date {
   font-weight: bold;
+}
+
+.container.body {
+  margin-bottom: 50px;
+}
+
+.container.nav .nav-title {
+  font-size: 2em;
+  color: #111;
+  text-decoration: none;
+}
+
+.container.nav .nav-sub {
+  color: #111;
+  text-decoration: none;
 }
 
 .post img {
